# coordinate-transformation-library

./: CMakeLists.txt  README.md
include/: gausskreuger.h  position.h  rt90position.h  sweref99position.h  wgs84position.h
src/: CMakeLists.txt  gausskreuger.cpp  gausskreuger.h  position.cpp  position.h  rt90position.cpp  rt90position.h  sweref99position.cpp  sweref99position.h  tests.cpp  wgs84position.cpp  wgs84position.h
tests/: tests.cpp
